Fix wrong font-weight

--- a/dev/sass/assets/_fonts.sass
+++ b/dev/sass/assets/_fonts.sass
@@ -44,7 +44,7 @@
 @font-face
     font-family: 'Montserrat'
     src: url('../fonts/Montserrat/Montserrat-ExtraBold.ttf') format('truetype')
-    font-weight: 900
+    font-weight: 800
     font-style: normal
 
 @font-face
